# rust-ibapi

./: .gitignore  AGENTS.md  ARCHITECTURE_REVIEW.md  ASYNC_ORDER_COMPARISON.md  ASYNC_RACE_CONDITION_ISSUE.md  ASYNC_REDESIGN.md  ASYNC_REFACTORING_PLAN.md  CHANGELOG.md  CLAUDE.md  CLIENT_INTEGRATION_TEST_TRACKING.md  CLIENT_ORGANIZATION_EXAMPLE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  MIGRATION.md  OPEN_ITEMS.md  README.md  REFACTORING_OPPORTUNITIES.md  RELEASE_NOTES_v2.1.0.md  REQUEST_BUILDER_EXAMPLES.md  SYNC_ASYNC_DESIGN.md  TODO.md  async_market_data_test_analysis.md  deny.toml  justfile  tarpaulin-report.html  todos.md  tws_interactions.yaml  yo
contributors/: README.md
docs/: api-patterns.md  architecture.md  build-and-test.md  code-style.md  contract-builder.md  examples.md  extending-api.md  feature-flags.md  integration-tests.md  migration-3.0.md  order-types.md  quick-start.md  testing-patterns.md  troubleshooting.md
examples/: CLIENT_PUBLIC_METHODS.md  README.md  README_ASYNC_MARKET_DATA.md  account_summary.rs  account_updates.rs  account_updates_multi.rs  async_account_summary.rs  async_connect.rs  async_head_timestamp.rs  async_histogram_data.rs  async_historical_data.rs  async_historical_schedule.rs  async_historical_ticks.rs  async_historical_ticks_midpoint.rs  async_managed_accounts.rs  async_market_depth.rs  async_pnl.rs  async_positions.rs  async_tick_by_tick.rs  async_wsh_event_data_by_contract.rs  async_wsh_event_data_by_filter.rs  async_wsh_metadata.rs  bracket_order.rs  breakout.rs  broad_tape_news.rs  calculate_implied_volatility.rs  calculate_option_price.rs  cancel_orders.rs  capture_order_list_responses.rs  capture_order_responses.rs  capture_simple_responses.rs  completed_orders.rs  conditional_orders.rs  contract_builder.rs  contract_details.rs  contract_news.rs  executions.rs  exercise_options.rs  family_codes.rs  head_timestamp.rs  (+62 more)
integration/: README.md
integration/async/: Cargo.toml
integration/async/tests/: accounts.rs  algo_orders.rs  concurrency.rs  conditional_orders.rs  connection.rs  contracts.rs  fundamental_data.rs  historical_data.rs  news.rs  notice_delivery.rs  orders.rs  realtime_data.rs  scanners.rs  state.rs  wsh.rs
plans/: 684-connectivity-status.md  694-shared-oneshot-error-delivery.md  accounts-text-decoder-cleanup.md  code-consistency-followups.md  csharp-sync-coverage.md  csharp-sync-pr-a-odd-lot-ticks.md  csharp-sync-pr-b-hedge-maxsize-versions.md  csharp-sync-pr-c-4min-bar.md  csharp-sync-pr-d-fundamentals.md  error-disposition-classifier.md  error-variants-audit.md  floor-213-ratchet.md  gate-206-text-decoder-cleanup.md  hide-internal-types.md  historical-data-builders.md  historical-text-decoder-cleanup.md  legacy-text-protocol-cleanup.md  notice-api-unification.md  one-way-to-spell.md  protobuf-migration.md  realtime-builders.md  retire-response-message-public-surface.md  standardize-streaming-consumer.md  subscription-canonical-import-path.md  tick-subscription-item-migration.md  tickefp-text-residue.md  typed-rejection-error.md  typed-status-sweep-pr1.md  typed-status-sweep-pr2.md  typed-status-sweep-pr4a.md  typed-status-sweep-pr4b.md  typed-status-sweep.md  v3-api-ergonomics.md
proto/: AccountDataEnd.proto  AccountDataRequest.proto  AccountSummary.proto  AccountSummaryEnd.proto  AccountSummaryRequest.proto  AccountUpdateMulti.proto  AccountUpdateMultiEnd.proto  AccountUpdateTime.proto  AccountUpdatesMultiRequest.proto  AccountValue.proto  AllOpenOrdersRequest.proto  ApiConfig.proto  ApiPrecautionsConfig.proto  ApiSettingsConfig.proto  AttachedOrders.proto  AutoOpenOrdersRequest.proto  CalculateImpliedVolatilityRequest.proto  CalculateOptionPriceRequest.proto  CancelAccountSummary.proto  CancelAccountUpdatesMulti.proto  CancelCalculateImpliedVolatility.proto  CancelCalculateOptionPrice.proto  CancelContractData.proto  CancelFundamentalsData.proto  CancelHeadTimestamp.proto  CancelHistogramData.proto  CancelHistoricalData.proto  CancelHistoricalTicks.proto  CancelMarketData.proto  CancelMarketDepth.proto  CancelNewsBulletins.proto  CancelOrderRequest.proto  CancelPnL.proto  CancelPnLSingle.proto  CancelPositions.proto  CancelPositionsMulti.proto  CancelRealTimeBars.proto  CancelScannerSubscription.proto  CancelTickByTick.proto  CancelWshEventData.proto  (+163 more)
src/: accounts.rs  client.rs  client_versions.rs  connection.rs  constants.rs  contracts.rs  domain.rs  errors.rs  errors_tests.rs  fixtures.rs  historical_market_data.rs  lib.rs  lib_tests.rs  macros.rs  market_data.rs  messages.rs  news.rs  orders.rs  outgoing_messages.rs  prelude.rs  protocol.rs  protocol_tests.rs  scanner.rs  server_versions.rs  streaming_market_data.rs  stubs.rs  stubs_tests.rs  testdata.rs  tests.rs  transport.rs  wsh.rs
tests/: conditional_orders_integration.rs  historical_market_data.rs  order_builder_integration.rs  test_wsh_async.rs
todos/: algo-order-builders.md  cancel-requests.md  client-api-review-v2.0.md  client-api-type-safety-review.md  client-api-v2-consolidated-review.md  contract-builder-fluent-api-implementation-guide.md  contract-builder-v2-api-design.md  eliminate-mock-gateway-audit.md  eliminate-mock-gateway.md  example-parity-tracker.md  exercise-options-testing.md  fluent-conditional-orders.md  fluent-interface-candidates.md  fluent-interface-review.md  fluent-interface-status.md  generic-tick-types.md  improve-encoder-test-coverage.md  issue-434-stream-decoder-error-handling.md  issue-441-order-status-option-doubles.md  legacy-text-protocol-cleanup.md  notice-api-unification.md  order-builder-complete.md  order-placement-fluent-interface-implementation.md  order-placement-fluent-interface-improved-errors.md  protobuf-message-framing.md  protobuf-migration.md  protobuf-phase1-prost-dependency.md  protobuf-phase2-binary-framing.md  protobuf-phase3-inbound-decoders.md  protobuf-phase4-outbound-encoders.md  protobuf-phase5-cleanup.md  reduce-inline-test-bloat.md  snapshot-end-routing-issue.md  split-client-into-domain-modules.md  sync-cleanup-thread-fast-shutdown.md  test-builders.md  type-safety-enums.md  (+2 more)
(+602 files in other folders)
