[package]
name = "ibapi"
version = "1.2.2"
edition = "2021"
authors = ["Wil Boayue <wil@wsbsolutions.com>"]
description = "A Rust implementation of the Interactive Brokers TWS API, providing a reliable and user friendly interface for TWS and IB Gateway. Designed with a focus on simplicity and performance."
readme = "README.md"
homepage = "https://github.com/wboayue/rust-ibapi/"
repository = "https://github.com/wboayue/rust-ibapi/"
documentation = "https://docs.rs/ibapi/latest/ibapi/"
license = "MIT"
keywords = ["algo-trading", "interactive-brokers", "tws"]
categories = ["finance", "api-bindings"]
exclude = [
    "justfile",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["sync"]
sync = ["dep:crossbeam"]
async = ["dep:tokio", "dep:futures", "dep:async-trait"]
# Note: sync and async are mutually exclusive. When async is enabled, it takes precedence over sync.

[dependencies]
byteorder = "1.5.0"
crossbeam = { version = "0.8.4", optional = true }
log = "0.4.22"
time = {version = "0.3.36", features = ["formatting", "macros", "local-offset", "parsing", "serde"]}
time-tz = "2.0.0"
serde = {version = "1.0.214" , features = ["derive"]}

# Async dependencies
tokio = { version = "1.41", features = ["net", "rt-multi-thread", "sync", "time", "macros", "io-util"], optional = true }
futures = { version = "0.3.31", optional = true }
async-trait = { version = "0.1.83", optional = true }

[dev-dependencies]
anyhow = "1.0.92"
clap = "4.5.20"
env_logger = "0.11.5"
pretty_assertions = "1.4.1"
tempfile = "3.13"
temp-env = "0.3.6"
serial_test = "3.1.1"

[[example]]
name = "async_connect"
required-features = ["async"]

[[example]]
name = "async_positions"
required-features = ["async"]

[[example]]
name = "async_account_summary"
required-features = ["async"]

[[example]]
name = "async_pnl"
required-features = ["async"]

[[example]]
name = "async_managed_accounts"
required-features = ["async"]

[[example]]
name = "async_wsh_metadata"
required-features = ["async"]

[[example]]
name = "async_wsh_event_data_by_contract"
required-features = ["async"]

[[example]]
name = "async_wsh_event_data_by_filter"
required-features = ["async"]

[[example]]
name = "async_market_data"
required-features = ["async"]

[[example]]
name = "async_realtime_bars"
required-features = ["async"]

[[example]]
name = "async_tick_by_tick"
required-features = ["async"]

[[example]]
name = "async_market_depth"
required-features = ["async"]

[[example]]
name = "async_historical_data"
required-features = ["async"]

[[example]]
name = "async_historical_ticks"
required-features = ["async"]

[[example]]
name = "async_head_timestamp"
required-features = ["async"]

[[example]]
name = "async_historical_schedule"
required-features = ["async"]

[[example]]
name = "async_tick_by_tick_last"
required-features = ["async"]

[[example]]
name = "async_historical_ticks_midpoint"
required-features = ["async"]

[[example]]
name = "async_historical_ticks_trade"
required-features = ["async"]

[[example]]
name = "async_histogram_data"
required-features = ["async"]

# Sync-only examples
[[example]]
name = "bracket_order"
required-features = ["sync"]

[[example]]
name = "breakout"
required-features = ["sync"]

[[example]]
name = "broad_tape_news"
required-features = ["sync"]

[[example]]
name = "cancel_orders"
required-features = ["sync"]

[[example]]
name = "completed_orders"
required-features = ["sync"]

[[example]]
name = "contract_news"
required-features = ["sync"]

[[example]]
name = "executions"
required-features = ["sync"]

[[example]]
name = "historical_news"
required-features = ["sync"]

[[example]]
name = "news_article"
required-features = ["sync"]

[[example]]
name = "news_bulletins"
required-features = ["sync"]

[[example]]
name = "news_providers"
required-features = ["sync"]

[[example]]
name = "options_exercise"
required-features = ["sync"]

[[example]]
name = "options_purchase"
required-features = ["sync"]

[[example]]
name = "orders"
required-features = ["sync"]

[[example]]
name = "place_order"
required-features = ["sync"]

[[example]]
name = "scanner_parameters"
required-features = ["sync"]

[[example]]
name = "scanner_subscription_active_stocks"
required-features = ["sync"]

[[example]]
name = "scanner_subscription_complex_orders"
required-features = ["sync"]

[[example]]
name = "submit_order"
required-features = ["sync"]
