[package]
name = "ibapi-integration-async"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
ibapi = { path = "../..", features = ["async"] }
tokio = { version = "1", features = ["full"] }
ibapi-test = { path = "../common" }
anyhow = "1"
env_logger = "0.11"
serial_test = "3.1.1"
time = "0.3"
